# AI-video-master-5.0

./: .env_template  .gitignore  README.md  UV_SETUP_GUIDE.md  activate_envs.sh  setup_config.sh
.cursor/rules/: uv-python-management.mdc
video_to_slice/: README.md  batch_video_to_slice.py  google_video_analyzer.py  main.py  pyproject.toml  requirements.txt  run.py  start.sh  video_slicer.py
video_to_slice/config/: config_example.txt  credentials_README.md
video_to_slice/data/input/: README.md
video_to_slice/docs/: README.md
video_to_slice/output_slices/: README.md
video_to_slice/src/: google_video_analyzer.py  parallel_batch_processor.py  parallel_video_slicer.py
video_to_srt/: .env.example  README.md  batch_video_to_srt.py  config_example.txt  dashscope_audio_analyzer.py  main.py  pyproject.toml  requirements.txt  run.py
video_to_srt/data/output/: 4.srt  5.srt
video_to_srt/docs/: README.md
video_to_srt/input_videos/: README.md
video_to_srt/src/: batch_video_to_srt.py  dashscope_audio_analyzer.py  env_loader.py  srt_utils.py
