[project]
name = "video-to-slice"
version = "0.1.0"
description = "AI-powered video slicing tool using Google Video Intelligence API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-videointelligence>=2.11.0",
    "google-cloud-storage>=2.8.0",
    "requests>=2.31.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
local = [
    "moviepy>=1.0.3",  # 用于本地视频处理
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "input_videos",
    "output_slices",
    "video_slice_env",
    "*.txt",
    "__pycache__",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[project.scripts]
video-slice = "run:main"
batch-video-slice = "batch_video_to_slice:main"
